--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,10 +7,18 @@ spec:
   #- host: myapp.local  # Замените на ваше доменное имя или оставьте так (для теста) либо удалить и будет доступ только по ip
    - http:
       paths:
-      - path: /
+      - path: /json
         pathType: Prefix
         backend:
           service:
             name: myapp-service
             port:
               number: 33500
+      - path: /app
+        pathType: Prefix
+        backend:
+          service:
+            name: apache-php-service
+            port:
+              number: 80
+  
