--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Minikube
+name: Deploy to Existing Minikube
 
 on:
   push:
@@ -6,35 +6,23 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: self-hosted  # важно! нужен локальный runner с доступом к Minikube
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Build Docker image
-      run: |
-        docker build -t myapp:latest .
+      run: docker build -t myapp:latest .
 
-    - name: Start Minikube
-      uses: medyagh/setup-minikube@v0.0.14
-      with:
-        minikube-version: 'v1.31.2'
-        kubernetes-version: 'v1.29.0'
+    - name: Load image to Minikube
+      run: minikube image load myapp:latest
 
-    - name: Load image into Minikube
-      run: |
-        minikube image load myapp:latest
-
-    - name: Deploy to Minikube with manifests
+    - name: Deploy to Kubernetes
       run: |
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
 
-    - name: Get service URL
-      run: |
-        minikube service myapp --url
+    - name: Print service URL
+      run: minikube service myapp --url
