--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,15 +19,21 @@ spec:
           ports:
             - containerPort: 33500
           livenessProbe:
-            tcpSocket:
-              port: 33500
-            initialDelaySeconds: 10
-            periodSeconds: 10
-          readinessProbe:
-            tcpSocket:
+            httpGet:
+              path: /
               port: 33500
             initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 33500
+            initialDelaySeconds: 2
             periodSeconds: 5
+            timeoutSeconds: 2
+            failureThreshold: 3
           resources:
             requests:
               memory: "64Mi"
